fixtures/errors/eval-strict-undeclared.js
"use strict";
eval('x = 5');